Добавлено представление Index для контроллера Teacher

--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
@@ -5,7 +5,12 @@
             <div class="nav_button"> Contact</div>
             <div class="nav_button"> About</div>
             <div class="nav_button"> Links</div>
-            <div class="nav_button"> Services </div>
+            <div class="nav_button"> 
+                <ul class="nav navbar-nav">
+                    <li><a asp-controller="Teacher" asp-action="Index"><i class="fa fa-user"></i> Преподы</a></li>
+                    
+                
+
         </div>
     </div>
 </div>
