--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
@@ -1,16 +1,17 @@
 ﻿<div id="top_bar_black">
     <div id="logo_container">
-        <div id="logo_image"> </div>  <div id="nav_block">
+        <div 
+            id="logo_image"> 
+
+        </div>  
+        <div id="nav_block">
             <div class="nav_button">Home </a></div>
             <div class="nav_button"> Contact</div>
             <div class="nav_button"> About</div>
             <div class="nav_button"> Links</div>
             <div class="nav_button"> 
-                <ul class="nav navbar-nav">
-                    <li><a asp-controller="Teacher" asp-action="Index"><i class="fa fa-user"></i> Преподы</a></li>
-                    
-                
-
+                <a asp-controller="Teacher" asp-action="Index">Преподы</></a></div>
         </div>
     </div>
 </div>
+
