Подправил пресдтавления Сотрудников

--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
@@ -5,7 +5,9 @@
 
         </div>  
         <div id="nav_block">
-            <div class="nav_button">Home </a></div>
+            <div class="nav_button">
+                <a asp-controller="Home" asp-action="Index">Главная</></a>
+            </div>
             <div class="nav_button"> Contact</div>
             <div class="nav_button"> About</div>
             <div class="nav_button"> Links</div>
