--- a/ASP.NET_EducationPlatform/Views/Shared/_Layout.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/_Layout.cshtml
@@ -1,22 +1,27 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="">
     <title>Образовательная платформа</title>
+    <partial Name="Partial/_Styles"/>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
     
-    <partial Name="Partial/_Header" />
+    @await Html.PartialAsync("Partial/_Header")
 
-    <div id="content_container">
-       
-    </div>
+    
 
     @RenderBody();
 
     <partial Name="Partial/_Footer"/>
+    <partial Name="Partial/_Scripts"/>
 
 </body>
 </html>
