--- a/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
@@ -6,7 +6,7 @@
 
     @if (Model.Any())
     {
-        <table class="table">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th></th>
@@ -20,23 +20,23 @@
             </thead>
 
             <tbode>
-                @foreach (var employee in Model)
+                @foreach (var teacher in Model)
                 {
                     <tr>
                         <td>
-                            <a asp-controller="Teacher" asp-action="Details" asp-route-Id="@employee.Id">
+                            <a asp-controller="Teacher" asp-action="Details" asp-route-Id="@teacher.Id">
                                 Информация
                                 <i class="fa fa-id-card" aria-hidden="true"></i>
                             </a>
                         </td>
-                        <td><a asp-controller="Teacher" asp-action="Edit" asp-route-Id="@employee.Id">Редактировать</a></td>
-                        <td>@employee.Id</td>
-                        <td>@employee.LastName</td>
-                        <td>@employee.FirstName</td>
-                        <td>@employee.Patronymic</td>
-                        <td>@employee.Speciality</td>
+                        <td><a asp-controller="Teacher" asp-action="Edit" asp-route-Id="@teacher.Id">Редактировать</a></td>
+                        <td>@teacher.Id</td>
+                        <td>@teacher.LastName</td>
+                        <td>@teacher.FirstName</td>
+                        <td>@teacher.Patronymic</td>
+                        <td>@teacher.Speciality</td>
                         <td>
-                            <a asp-controller="Employees" asp-action="Delete" asp-route-Id="@employee.Id">Удалить</a>
+                            <a asp-controller="Teacher" asp-action="Delete" asp-route-Id="@teacher.Id">Удалить</a>
                         </td>
                     </tr>
                 }
