--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
@@ -1,19 +1,17 @@
-﻿<div id="top_bar_black">
+﻿
+<div id="top_bar_black">
     <div id="logo_container">
-        <div 
-            id="logo_image"> 
-
-        </div>  
+        <div id="logo_image">
+        </div>
         <div id="nav_block">
             <div class="nav_button">
                 <a asp-controller="Home" asp-action="Index">Главная</></a>
             </div>
-            <div class="nav_button"> Contact</div>
-            <div class="nav_button"> About</div>
-            <div class="nav_button"> Links</div>
-            <div class="nav_button"> 
-                <a asp-controller="Teacher" asp-action="Index">Преподы</></a></div>
+            <div class="nav_button">
+                <a asp-controller="Teacher" asp-action="Index">Преподы</></a>
+            </div>
         </div>
     </div>
 </div>
+
 
