--- a/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
@@ -6,6 +6,7 @@
 
 <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
 <div class="container">
 
