--- a/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
@@ -1,13 +1,14 @@
 ﻿@model ASP.NET_EducationPlatform.ViewModels.TeacherViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = $"Редактирование сотрудника";
 }
 
-<link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
-<link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-
 <div class="container">
+
+    <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
 <h1>Edit</h1>
 
