--- a/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<EducationPlatfotm.Domain.Users.Teacher>
+﻿
+@model IEnumerable<EducationPlatfotm.Domain.Users.Teacher>
 
 <div class="container">
     <h3>Сотрудники</h3>
@@ -6,7 +7,7 @@
 
     @if (Model.Any())
     {
-        <table class="table table-bordered">
+        <table class="table table-hover">
             <thead>
                 <tr>
                     <th></th>
