Информация и редактирование сотрудника

--- a/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
@@ -10,9 +10,9 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
-<h1>Edit</h1>
+<h4>Редактирование сотрудника - Id: @Model.Id </h4>
 
-<h4>TeacherViewModel</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
