--- a/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
@@ -10,10 +10,10 @@
 
 <div class="container">
 
-<h1>Информация</h1>
+    <h4>Информация о сотруднике - Id: @Model.Id </h4>
 
 <div>
-    <h4>TeacherViewModel</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.Patronymic)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Speciality)
+            @Html.DisplayNameFor(model => model.Subject.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Speciality)
+            @Html.DisplayFor(model => model.Subject.Name)
         </dd>
     </dl>
 </div>
