--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
@@ -8,8 +8,12 @@
                 <a asp-controller="Home" asp-action="Index">Главная</></a>
             </div>
             <div class="nav_button">
-                <a asp-controller="Teacher" asp-action="Index">Преподы</></a>
+                <a asp-controller="Teacher" asp-action="Index">Преподаватели</></a>
             </div>
+            <div class="nav_button">
+                <a asp-controller="Student" asp-action="Index">Ученики</></a>
+            </div>
+
         </div>
     </div>
 </div>
