--- a/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.Patronymic)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Subject.Name)
+            @Html.DisplayNameFor(model => model.Subjects)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Subject.Name)
+            @Html.DisplayFor(model => model.Subjects)
         </dd>
     </dl>
 </div>
