--- a/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
@@ -29,15 +29,16 @@
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Patronymic" class="control-label"></label>
-                <input asp-for="Patronymic" class="form-control" />
-                <span asp-validation-for="Patronymic" class="text-danger"></span>
+                <select asp-for="Id" asp-items="@(new SelectList(Model.Speciality, "Name", "Name"))">
+                    
+                </select>
+
+
+
             </div>
-            <div class="form-group">
-                <label asp-for="Speciality" class="control-label"></label>
-                <input asp-for="Speciality" class="form-control" />
-                <span asp-validation-for="Speciality" class="text-danger"></span>
-            </div>
+
+            
+           
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
