--- a/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
@@ -16,7 +16,7 @@
                     <th>@Html.DisplayNameFor(model => model.LastName)</th>
                     <th>@Html.DisplayNameFor(model => model.FirstName)</th>
                     <th>@Html.DisplayNameFor(model => model.Patronymic)</th>
-                    <th>@Html.DisplayNameFor(model => model.Subject.Name)</th>
+                    <th>@Html.DisplayNameFor(model => model.Subjects)</th>
                 </tr>
             </thead>
 
@@ -35,7 +35,12 @@
                         <td>@teacher.LastName</td>
                         <td>@teacher.FirstName</td>
                         <td>@teacher.Patronymic</td>
-                        <td>@teacher.Subject.Name</td>
+                        <td>
+                        @foreach(var sub in teacher.Subjects)
+                        {
+                                <p>@sub.Name</p>
+                        }
+                        </td>
                         <td>
                             <a asp-controller="Teacher" asp-action="Delete" asp-route-Id="@teacher.Id">Удалить</a>
                         </td>
