Работает выбор предмета при редактировании преподавателя

--- a/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
@@ -38,7 +38,10 @@
                         <td>
                         @foreach(var sub in teacher.Subjects)
                         {
+                            @if(sub.IsInvolved == true)
+                            {
                                 <p>@sub.Name</p>
+                            }
                         }
                         </td>
                         <td>
