--- a/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
@@ -29,13 +29,28 @@
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Patronymic" class="control-label"></label>
+                <input asp-for="Patronymic" class="form-control" />
+                <span asp-validation-for="Patronymic" class="text-danger"></span>
+            </div>
+            @*<div class="form-group">
                 <select asp-for="Id" asp-items="@(new SelectList(Model.Speciality, "Name", "Name"))">
                     
                 </select>
 
+            </div>*@
 
+                <div class="form-group">
+                    @for(int i = 0; i < Model.Speciality.Count; i++)
+                    {
+                        @Html.HiddenFor(m => m.Speciality[i].Name)
+                        @Html.DisplayFor(m => m.Speciality[i].Name)
+                        @Html.CheckBoxFor(m => m.Speciality[i].IsInvolved)
 
-            </div>
+                    }
+
+                    
+                </div>
 
             
            
