--- a/ASP.NET_EducationPlatform/Views/Teacher/Delete.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Delete.cshtml
@@ -39,7 +39,14 @@
             @Html.DisplayNameFor(model => model.Speciality)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Speciality)
+            @for (int i = 0; i < Model.Speciality.Count; i++)
+            {
+                @if (Model.Speciality[i].IsInvolved == true)
+                {
+                    <tr>@Html.DisplayFor(model => model.Speciality[i].Name)</tr>
+                }
+            }
+
         </dd>
 
     </dl>
