--- a/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Details.cshtml
@@ -44,7 +44,14 @@
             @Html.DisplayNameFor(model => model.Subjects)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Subjects)
+            @for(int i = 0; i < Model.Subjects.Count; i++)
+            {
+                @if(Model.Subjects[i].IsInvolved == true)
+                {
+                        <tr>@Html.DisplayFor(model => model.Subjects[i].Name)</tr>   
+                }
+            }
+            
         </dd>
     </dl>
 </div>
