--- a/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
@@ -33,23 +33,18 @@
                 <input asp-for="Patronymic" class="form-control" />
                 <span asp-validation-for="Patronymic" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                <select asp-for="Id" asp-items="@(new SelectList(Model.Speciality, "Name", "Name"))">
-                    
-                </select>
-
-            </div>*@
 
                 <div class="form-group">
                     @for(int i = 0; i < Model.Speciality.Count; i++)
                     {
                         @Html.HiddenFor(m => m.Speciality[i].Name)
-                        @Html.DisplayFor(m => m.Speciality[i].Name)
-                        @Html.CheckBoxFor(m => m.Speciality[i].IsInvolved)
-
+                        
+                        
+                        <tr>
+                            <td>@Html.DisplayFor(m => m.Speciality[i].Name)</td>
+                            <td>@Html.CheckBoxFor(m => m.Speciality[i].IsInvolved)</td>
+                        </tr>
                     }
-
-                    
                 </div>
 
             
