--- a/ASP.NET_EducationPlatform/Views/Student/Delete.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Student/Delete.cshtml
@@ -1,19 +1,14 @@
-﻿@model EducationPlatfotm.Domain.Users.Teacher
+﻿@model ASP.NET_EducationPlatform.ViewModels.StudentViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
-
-<link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
-<link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
 <div class="container">
 
-    <h4>Информация о сотруднике - Id: @Model.Id </h4>
+    <h4>Удаление ученика - Id: @Model.Id</h4>
 
 <div>
-    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -41,24 +36,29 @@
             @Html.DisplayFor(model => model.Patronymic)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Subjects)
+            @Html.DisplayNameFor(model => model.YearStudy)
         </dt>
         <dd class = "col-sm-10">
-            @for(int i = 0; i < Model.Subjects.Count; i++)
+            @Html.DisplayFor(model => model.YearStudy)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Speciality)
+        </dt>
+        <dd class="col-sm-10">
+            @for (int i = 0; i < Model.Speciality.Count; i++)
             {
-                @if(Model.Subjects[i].IsInvolved == true)
-                {   
-                    <th>@Html.DisplayFor(model => model.Subjects[i].Name)</th>
+                @if (Model.Speciality[i].IsInvolved == true)
+                {
+                    <tr>@Html.DisplayFor(model => model.Speciality[i].Name)</tr>
                 }
             }
-            
+
         </dd>
     </dl>
-</div>
-<div>
-        <form asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
-            <input type="submit" value="Удалить" class="btn btn-danger" /> |
-            <a asp-action="Index">На главную</a>
-        </form>
+    
+    <form asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
+        <a asp-action="Index">На главную</a>
+    </form>
 </div>
 </div>
