--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
@@ -8,11 +8,15 @@
                 <a asp-controller="Home" asp-action="Index">Главная</></a>
             </div>
             <div class="nav_button">
+                <a asp-controller="Lesson" asp-action="Index">Мои уроки</></a>
+            </div>
+            <div class="nav_button">
                 <a asp-controller="Student" asp-action="Index">Ученики</></a>
             </div>
             <div class="nav_button">
                 <a asp-controller="Teacher" asp-action="Index">Преподаватели</></a>
             </div>
+
             
 
         </div>
