--- a/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
@@ -7,7 +7,7 @@
 
     @if (Model.Any())
     {
-        <table class="table table-hover">
+        <table class="table table-bordered">
             <thead>
                 <tr>
                     <th></th>
