--- a/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
@@ -25,7 +25,7 @@
                     <span asp-validation-for="DateTime" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Direction" class="control-label"></label>
+                    <label asp-for="Direction" class="control-label"></label> 
                     <input asp-for="Direction" class="form-control" />
                     <span asp-validation-for="Direction" class="text-danger"></span>
                 </div>
@@ -33,7 +33,7 @@
 
                 <div class="form-group">
                     <td>@Html.DisplayNameFor(model => model.Teacher)</td>
-                    <td>@Html.DropDownListFor(model => model.Teacher, new SelectList(Model.TeacherSelectList, "Id", "LastName"), "Select")</td>
+                    <td>@Html.DropDownListFor(model => model.Teacher, new SelectList(Model.TeacherSelectList, "Value", "Text"))</td>
                 </div>
             
 
@@ -41,6 +41,9 @@
                     <input type="submit" value="Сохранить" class="btn btn-primary" />
                 </div>
             </form>
+
+            <b>Value:</b>@ViewBag.Value
+            <b>Text:</b>@ViewBag.Text
         </div>
     </div>
 
