--- a/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ASP.NET_EducationPlatform.Data
 
 
-@model ASP.NET_EducationPlatform.ViewModels.LessonViewModel
+@model ASP.NET_EducationPlatform.ViewModels.EditLessonViewModel
 
 
 @{
@@ -10,19 +10,19 @@
 
 <div class="container">
 
-    <h4>Редактирование информации об уроке - Id: @Model.Id </h4>
+    <h4>Редактирование информации об уроке - Id: @Model.LessonId </h4>
 
 
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Edit" asp-route-id="@Model.Id" method="post">
+            <form asp-action="Edit" asp-route-id="@Model.LessonId" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
                 <div class="form-group">
-                    <label asp-for="DateTime" class="control-label"></label>
-                    <input asp-for="DateTime" class="form-control" />
-                    <span asp-validation-for="DateTime" class="text-danger"></span>
+                    <label asp-for="Date" class="control-label"></label>
+                    <input asp-for="Date" class="form-control" />
+                    <span asp-validation-for="Date" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Direction" class="control-label"></label> 
@@ -32,18 +32,19 @@
 
 
                 <div class="form-group">
-                    <td>@Html.DisplayNameFor(model => model.Teacher)</td>
-                    <td>@Html.DropDownListFor(model => model.Teacher, new SelectList(Model.TeacherSelectList, "Value", "Text"))</td>
+                    <td>@Html.DisplayNameFor(model => model.TeacherFullName)</td>
+                    <td>@Html.DropDownListFor(model => model.Selected, Model.TeacherSelectList)</td>
                 </div>
             
 
                 <div class="form-group">
                     <input type="submit" value="Сохранить" class="btn btn-primary" />
                 </div>
-            </form>
 
-            <b>Value:</b>@ViewBag.Value
-            <b>Text:</b>@ViewBag.Text
+                @Html.HiddenFor(x => x.TeacherFullName )
+                @Html.HiddenFor(x => x.LessonId )
+
+            </form>
         </div>
     </div>
 
