--- a/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
@@ -35,14 +35,29 @@
                     <td>@Html.DisplayNameFor(model => model.TeacherFullName)</td>
                     <td>@Html.DropDownListFor(model => model.Selected, Model.TeacherSelectList)</td>
                 </div>
+
+                <div class="form-group">
+                    @for (int i = 0; i < Model.StudentsSubj.Count; i++)
+                    {
+                        <p>fhghghfghdghgdh</p>
+                        @Html.HiddenFor(m => m.StudentsSubj[i].LastName)
+
+                        <tr>
+                            <td>@Html.DisplayFor(m => m.StudentsSubj[i].LastName)</td>
+                            <td>@Html.CheckBoxFor(m => m.StudentsSubj[i].IsInvolved)</td>
+                        </tr>
+                    }
+                </div>
             
 
                 <div class="form-group">
                     <input type="submit" value="Сохранить" class="btn btn-primary" />
                 </div>
 
-                @Html.HiddenFor(x => x.TeacherFullName )
-                @Html.HiddenFor(x => x.LessonId )
+                @Html.HiddenFor(x => x.TeacherFullName)
+                @Html.HiddenFor(x => x.LessonId)
+                
+
 
             </form>
         </div>
