--- a/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
@@ -42,6 +42,18 @@
                 </div>
 
                 <div class="form-group">
+                    @for (int i = 0; i < Model.StudentSubj.Count; i++)
+                    {
+                        @Html.HiddenFor(m => m.StudentSubj[i].LastName)
+
+                        <tr>
+                            <td>@Html.DisplayFor(m => m.StudentSubj[i].LastName)</td>
+                            <td>@Html.CheckBoxFor(m => m.StudentSubj[i].IsInvolved)</td>
+                        </tr>
+                    }
+                </div>
+
+                <div class="form-group">
                     <input type="submit" value="Сохранить" class="btn btn-primary" />
                 </div>
 
