--- a/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Edit.cshtml
@@ -3,6 +3,9 @@
 
 @model ASP.NET_EducationPlatform.ViewModels.EditLessonViewModel
 
+<link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+<link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
 @{
     ViewData["Title"] = "Edit";
@@ -45,10 +48,6 @@
                     <td>@Html.DisplayNameFor(model => model.StudentFullName)</td>
                     <td>@Html.DropDownListFor(model => model.SelectedStudent, Model.StudentSelectList)</td>
                 </div>
-
-
-
-                
 
                 <div class="form-group">
                     <input type="submit" value="Сохранить" class="btn btn-primary" />
