--- a/ASP.NET_EducationPlatform/Views/Student/Delete.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Student/Delete.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
+
+<link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+<link href="~/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+
 <div class="container">
 
     <h4>Удаление ученика - Id: @Model.Id</h4>
