--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Footer.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Footer.cshtml
@@ -1,1 +1,12 @@
-﻿
+﻿<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 col-sm-6 col-xs-12 fbox">
+                <h4>CONTENT</h4>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p><a href="tel:+902222222222"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> +90 222 222 22 22</a></p>
+                <p><a href="mailto:iletisim@agrisosgb.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> mail@awebsitename.com</a></p>
+            </div>
+        </div>
+    </div>
+</footer>
