--- a/ASP.NET_EducationPlatform/wwwroot/css/style.css
+++ b/ASP.NET_EducationPlatform/wwwroot/css/style.css
@@ -98,7 +98,7 @@ h2.section-title {text-align: center;color: #404040;}
 @media (min-width: 992px ) {.carousel-inner .active.left {left: -25%;}.carousel-inner .next {left: 25%;}.carousel-inner .prev {left: -25%;}}
 
 /* Footer */
-footer.site-footer {background: #e6e6e6;padding: 20px 0 0;float: left;width: 100%;}
+footer.site-footer {background: #e6e6e6;padding: 20px 0 0;float: right;width: 100%;}
 footer.site-footer h4 {font-size: 17px;font-weight: 500;}
 footer.site-footer ul {padding-left: 0;margin-bottom: 20px;list-style: none;}
 footer.site-footer ul a {color: #666;font-size: 13px;}
