--- a/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Index.cshtml
@@ -2,8 +2,11 @@
 @model IEnumerable<EducationPlatfotm.Domain.Users.Teacher>
 
 <div class="container">
-    <h3>Сотрудники</h3>
+    <h3>Преподаватель</h3>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <a class="btn btn-default" asp-action="Edit">Добавить преподавателя</a>
+    <p></p>
 
     @if (Model.Any())
     {
