--- a/ASP.NET_EducationPlatform/Views/Lesson/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Index.cshtml
@@ -29,12 +29,14 @@
                         <td>@lesson.Subject.Name</td>
                         <td>
                             <a asp-controller="Teacher" asp-action="Details" asp-route-Id="@lesson.Teacher.Id">
-                                @lesson.Teacher.LastName  @lesson.Teacher.FirstName @lesson.Teacher.Patronymic
+                                @lesson.Teacher.fio
                             </a>
                         </td>
 
                         <td>
-                            <p>@lesson.Student.fio</p>
+                            <a asp-controller="Student" asp-action="Details" asp-route-Id="@lesson.Student.Id">
+                                @lesson.Student.fio
+                            </a>
                         </td>
                         
                         <td>
