--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Footer.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Footer.cshtml
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12 fbox">
-                <h4>CONTENT</h4>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <p><a href="tel:+902222222222"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> +90 222 222 22 22</a></p>
-                <p><a href="mailto:iletisim@agrisosgb.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> mail@awebsitename.com</a></p>
+                <h4>Контакты</h4>
+                <p class="text">Вы можете связаться с нами!</p>
+                <p><a href="tel:+902222222222"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> +79027433245</a></p>
+                <p><a href="mailto:iletisim@agrisosgb.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> easyexam@gmail.com</a></p>
             </div>
         </div>
     </div>
