--- a/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Shared/Partial/_Header.cshtml
@@ -1,20 +1,24 @@
 ﻿<header class="site-header">
     <nav class="navbar navbar-default">
+        
         <div class="container">
+            
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
                 <span class="sr-only">Toggle Navigation</span>
                 <i class="fa fa-bars"></i>
             </button>
-            <a href="index.html" class="navbar-brand">
-                <img src="img/logo.png" alt="Post">
-            </a>
+            
+           
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+                
                 <ul class="nav navbar-nav main-navbar-nav">
+                    <li><a asp-controller="Home" asp-action="Index"><img src="img/easy1.png" width="200" height="60"></a></li>
                     <li><a asp-controller="Home" asp-action="Index">Главная</a></li>
                     <li><a asp-controller="Teacher" asp-action="Index">Преподаватели</a></li>
                     <li><a asp-controller="Student" asp-action="Index">Ученики</a></li>
                     <li><a asp-controller="Lesson" asp-action="Index">Мои уроки</a></li>
+                    
                 </ul>
             </div><!-- /.navbar-collapse -->
             <!-- END MAIN NAVIGATION -->
