--- a/ASP.NET_EducationPlatform/Views/Lesson/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Index.cshtml
@@ -4,6 +4,8 @@
     <h3>Мои уроки</h3>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
+    <a class="btn btn-default" asp-action="Edit">Добавить урок</a>
+
     @if (Model.Any())
     {
         <table class="table table-bordered">
