--- a/ASP.NET_EducationPlatform/Views/Student/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Student/Edit.cshtml
@@ -43,12 +43,15 @@
             <div class="form-group">
                 @for (int i = 0; i < Model.Speciality.Count; i++)
                 {
-                    @Html.HiddenFor(m => m.Speciality[i].Name)
+                    
 
-                    <tr>
-                        <td>@Html.DisplayFor(m => m.Speciality[i].Name)</td>
-                        <td>@Html.CheckBoxFor(m => m.Speciality[i].IsInvolved)</td>
-                    </tr>
+                    <div>
+                        @Html.CheckBoxFor(m => m.Speciality[i].IsInvolved)
+                        @Html.DisplayFor(m => m.Speciality[i].Name)
+                    </div>
+
+                    @Html.HiddenFor(m => m.Speciality[i].Name)
+                        
                 }
             </div>
             <div class="form-group">
