Реализация добавления урока

--- a/ASP.NET_EducationPlatform/Views/Lesson/Index.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Lesson/Index.cshtml
@@ -4,7 +4,7 @@
     <h3>Мои уроки</h3>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <a class="btn btn-default" asp-action="Edit">Добавить урок</a>
+    <a class="btn btn-default" asp-action="Create">Добавить урок</a>
 
     @if (Model.Any())
     {
