--- a/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
+++ b/ASP.NET_EducationPlatform/Views/Teacher/Edit.cshtml
@@ -34,18 +34,16 @@
                 <span asp-validation-for="Patronymic" class="text-danger"></span>
             </div>
 
-                <div class="form-group">
-                    @for(int i = 0; i < Model.Speciality.Count; i++)
-                    {
-                        @Html.HiddenFor(m => m.Speciality[i].Name)
-                        
-                        
-                       
-                            <td>@Html.DisplayFor(m => m.Speciality[i].Name)</td>
-                            <td>@Html.CheckBoxFor(m => m.Speciality[i].IsInvolved)</td>
-                        
-                    }
-                </div>
+            <div class="form-group">
+                @for (int i = 0; i < Model.Speciality.Count; i++)
+                {
+                    <div>
+                        @Html.CheckBoxFor(m => m.Speciality[i].IsInvolved)
+                        @Html.DisplayFor(m => m.Speciality[i].Name)
+                    </div>
+                    @Html.HiddenFor(m => m.Speciality[i].Name)
+                }
+            </div>
             <div class="form-group">
                 <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
